{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 45,
  "lineage": "72e5d7fd-7107-6f23-c1bd-eb09d848eeb5",
  "resources": [
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04242e05c1ebface0",
            "arn": "arn:aws:ec2:ap-south-1:493828032131:instance/i-00eb518576ef05219",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00eb518576ef05219",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-dev",
            "monitoring": false,
            "primary_network_interface_id": "eni-03637feb5856f2d8d",
            "private_dns": "ip-190-160-1-233.ap-south-1.compute.internal",
            "private_ip": "190.160.1.233",
            "public_ip": "13.235.13.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0d032f61cc0be44d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4fa615b40498a0a",
            "tags": {
              "Environmnent": "dev",
              "Name": "instance-dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08772cf61aac86183"
            ]
          },
          "depends_on": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-03c6e2c19332bdea9",
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c6e2c19332bdea9",
            "id": "r-rtb-06db4d332ac3c3ec51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06db4d332ac3c3ec5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this[0]",
            "aws_route_table.public[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027eb9fe7e0ff17ed",
            "owner_id": "493828032131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06862463378bbf77c",
            "owner_id": "493828032131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ae45abb157a3f22d",
            "owner_id": "493828032131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06db4d332ac3c3ec5",
            "owner_id": "493828032131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080f9a80a71db3f20",
            "route_table_id": "rtb-027eb9fe7e0ff17ed",
            "subnet_id": "subnet-04e6e0cdf87121777"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a16719154cfec709",
            "route_table_id": "rtb-06862463378bbf77c",
            "subnet_id": "subnet-0344fec52fb661e05"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f8b288ce75bc083",
            "route_table_id": "rtb-0ae45abb157a3f22d",
            "subnet_id": "subnet-0c568e808582623c2"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f36e149093dc043",
            "route_table_id": "rtb-06db4d332ac3c3ec5",
            "subnet_id": "subnet-0f4fa615b40498a0a"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ae9523cf3bf2908",
            "route_table_id": "rtb-06db4d332ac3c3ec5",
            "subnet_id": "subnet-0c9e778c72be975cc"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4ce9146e9ba2f6f",
            "route_table_id": "rtb-06db4d332ac3c3ec5",
            "subnet_id": "subnet-02c3cdebd4dc7bc9c"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:security-group/sg-08772cf61aac86183",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08772cf61aac86183",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-dev",
            "name_prefix": null,
            "owner_id": "493828032131",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-074495b899791e54b"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:subnet/subnet-04e6e0cdf87121777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "190.160.4.0/24",
            "id": "subnet-04e6e0cdf87121777",
            "map_public_ip_on_launch": false,
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:subnet/subnet-0344fec52fb661e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "190.160.5.0/24",
            "id": "subnet-0344fec52fb661e05",
            "map_public_ip_on_launch": false,
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:subnet/subnet-0c568e808582623c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "190.160.6.0/24",
            "id": "subnet-0c568e808582623c2",
            "map_public_ip_on_launch": false,
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:subnet/subnet-0f4fa615b40498a0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "190.160.1.0/24",
            "id": "subnet-0f4fa615b40498a0a",
            "map_public_ip_on_launch": true,
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:subnet/subnet-0c9e778c72be975cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "190.160.2.0/24",
            "id": "subnet-0c9e778c72be975cc",
            "map_public_ip_on_launch": true,
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:subnet/subnet-02c3cdebd4dc7bc9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "190.160.3.0/24",
            "id": "subnet-02c3cdebd4dc7bc9c",
            "map_public_ip_on_launch": true,
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074495b899791e54b"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493828032131:vpc/vpc-074495b899791e54b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.160.0.0/16",
            "default_network_acl_id": "acl-0a4e43aa8b27a9ad7",
            "default_route_table_id": "rtb-05dac4c1b9a0ec9ee",
            "default_security_group_id": "sg-0d0f16b8b391b3cce",
            "dhcp_options_id": "dopt-db4955b3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-074495b899791e54b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05dac4c1b9a0ec9ee",
            "owner_id": "493828032131",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}